
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int git_repository ;
typedef int git_reference ;
typedef int git_object ;
typedef int git_buf ;


 int GIT_BUF_INIT ;
 int GIT_EINVALIDSPEC ;
 int GIT_ERROR ;
 int GIT_ERROR_INVALID ;
 int any_left_hand_identifier (int *,int *,size_t) ;
 int assert (int ) ;
 int ensure_base_rev_is_not_known_yet (int *) ;
 int ensure_base_rev_loaded (int **,int **,char const*,size_t,int *,int) ;
 int ensure_left_hand_identifier_is_not_known_yet (int *,int *) ;
 int extract_curly_braces_content (int *,char const*,size_t*) ;
 int extract_how_many (int*,char const*,size_t*) ;
 int extract_path (int *,char const*,size_t*) ;
 char* git_buf_cstr (int *) ;
 int git_buf_dispose (int *) ;
 int git_error_set (int ,char*,...) ;
 int git_object_free (int *) ;
 int git_reference_free (int *) ;
 int handle_at_syntax (int **,int **,char const*,size_t,int *,char*) ;
 int handle_caret_curly_syntax (int **,int *,char*) ;
 int handle_caret_parent_syntax (int **,int *,int) ;
 int handle_colon_syntax (int **,int *,char*) ;
 int handle_grep_syntax (int **,int *,int *,int ) ;
 int handle_linear_syntax (int **,int *,int) ;

int revparse__ext(
 git_object **object_out,
 git_reference **reference_out,
 size_t *identifier_len_out,
 git_repository *repo,
 const char *spec)
{
 size_t pos = 0, identifier_len = 0;
 int error = -1, n;
 git_buf buf = GIT_BUF_INIT;

 git_reference *reference = ((void*)0);
 git_object *base_rev = ((void*)0);

 bool should_return_reference = 1;

 assert(object_out && reference_out && repo && spec);

 *object_out = ((void*)0);
 *reference_out = ((void*)0);

 while (spec[pos]) {
  switch (spec[pos]) {
  case '^':
   should_return_reference = 0;

   if ((error = ensure_base_rev_loaded(&base_rev, &reference, spec, identifier_len, repo, 0)) < 0)
    goto cleanup;

   if (spec[pos+1] == '{') {
    git_object *temp_object = ((void*)0);

    if ((error = extract_curly_braces_content(&buf, spec, &pos)) < 0)
     goto cleanup;

    if ((error = handle_caret_curly_syntax(&temp_object, base_rev, git_buf_cstr(&buf))) < 0)
     goto cleanup;

    git_object_free(base_rev);
    base_rev = temp_object;
   } else {
    git_object *temp_object = ((void*)0);

    if ((error = extract_how_many(&n, spec, &pos)) < 0)
     goto cleanup;

    if ((error = handle_caret_parent_syntax(&temp_object, base_rev, n)) < 0)
     goto cleanup;

    git_object_free(base_rev);
    base_rev = temp_object;
   }
   break;

  case '~':
  {
   git_object *temp_object = ((void*)0);

   should_return_reference = 0;

   if ((error = extract_how_many(&n, spec, &pos)) < 0)
    goto cleanup;

   if ((error = ensure_base_rev_loaded(&base_rev, &reference, spec, identifier_len, repo, 0)) < 0)
    goto cleanup;

   if ((error = handle_linear_syntax(&temp_object, base_rev, n)) < 0)
    goto cleanup;

   git_object_free(base_rev);
   base_rev = temp_object;
   break;
  }

  case ':':
  {
   git_object *temp_object = ((void*)0);

   should_return_reference = 0;

   if ((error = extract_path(&buf, spec, &pos)) < 0)
    goto cleanup;

   if (any_left_hand_identifier(base_rev, reference, identifier_len)) {
    if ((error = ensure_base_rev_loaded(&base_rev, &reference, spec, identifier_len, repo, 1)) < 0)
     goto cleanup;

    if ((error = handle_colon_syntax(&temp_object, base_rev, git_buf_cstr(&buf))) < 0)
     goto cleanup;
   } else {
    if (*git_buf_cstr(&buf) == '/') {
     if ((error = handle_grep_syntax(&temp_object, repo, ((void*)0), git_buf_cstr(&buf) + 1)) < 0)
      goto cleanup;
    } else {





     git_error_set(GIT_ERROR_INVALID, "unimplemented");
     error = GIT_ERROR;
     goto cleanup;
    }
   }

   git_object_free(base_rev);
   base_rev = temp_object;
   break;
  }

  case '@':
   if (spec[pos+1] == '{') {
    git_object *temp_object = ((void*)0);

    if ((error = extract_curly_braces_content(&buf, spec, &pos)) < 0)
     goto cleanup;

    if ((error = ensure_base_rev_is_not_known_yet(base_rev)) < 0)
     goto cleanup;

    if ((error = handle_at_syntax(&temp_object, &reference, spec, identifier_len, repo, git_buf_cstr(&buf))) < 0)
     goto cleanup;

    if (temp_object != ((void*)0))
     base_rev = temp_object;
    break;
   }


  default:
   if ((error = ensure_left_hand_identifier_is_not_known_yet(base_rev, reference)) < 0)
    goto cleanup;

   pos++;
   identifier_len++;
  }
 }

 if ((error = ensure_base_rev_loaded(&base_rev, &reference, spec, identifier_len, repo, 0)) < 0)
  goto cleanup;

 if (!should_return_reference) {
  git_reference_free(reference);
  reference = ((void*)0);
 }

 *object_out = base_rev;
 *reference_out = reference;
 *identifier_len_out = identifier_len;
 error = 0;

cleanup:
 if (error) {
  if (error == GIT_EINVALIDSPEC)
   git_error_set(GIT_ERROR_INVALID,
    "failed to parse revision specifier - Invalid pattern '%s'", spec);

  git_object_free(base_rev);
  git_reference_free(reference);
 }

 git_buf_dispose(&buf);
 return error;
}
